fix clickable invisible buttons

--- a/css/main.scss
+++ b/css/main.scss
@@ -87,6 +87,13 @@ body.slider-body {
   opacity: 0;
   pointer-events: none;
   user-select: none;
+
+  .sentence.active {
+    pointer-events: none;
+    button {
+      pointer-events: none;
+    }
+  }
 }
 
 .text-nav .text {
